<resources>
    <string name="app_name">WeCyberStage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="play_profile_poster">poster</string>
    <string name="hello">hello</string>
    <string name="bottom_bar_pre">pre</string>
    <string name="bottom_bar_play">play</string>
    <string name="bottom_bar_next">next</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number">phone number</string>
    <string name="password">password</string>
    <string name="phone_authCode">authenticate code</string>
    <string name="stage_name">stage name</string>
    <string name="ok">OK</string>
</resources>
