<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp_component"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/signUp_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:id="@+id/signUp_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"

        android:orientation="vertical">

        <EditText
            android:id="@+id/signUp_stageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/stage_name"
            android:gravity="center"
            android:ems="10"
            android:inputType="phone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/signUp_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
            <ImageButton
                android:id="@+id/signUp_send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_outline_send_24px"
                android:layout_marginLeft="-24dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/signUp_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
            <ImageButton
                android:id="@+id/signUp_eyeShow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/eye_off_outline"
                android:layout_marginLeft="-24dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/signUp_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
            <!--ImageButton
                android:id="@+id/signUp_eyeShow2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/eye_off_outline"
                android:layout_marginLeft="-24dp"
                android:background="@android:color/transparent"/-->
        </LinearLayout>
        <EditText
            android:id="@+id/signUp_authCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/phone_authCode"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <Button style="@style/Widget.AppCompat.Button"
        android:id="@+id/signUp_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_profile"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="-18dp"
        android:text="@string/sign_up"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:id="@+id/signUp_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        android:theme="@style/PrimaryFlatButton"/>

</RelativeLayout>

